--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1,6 +1,144 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import re\n",
+    "\n",
+    "import spacy\n",
+    "from spacy.tokenizer import Tokenizer\n",
+    "from spacy.lang.en import English\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "\n",
+    "import string\n",
+    "from collections import Counter\n",
+    "from nltk.corpus import stopwords\n",
+    "stopwords = stopwords.words('english')\n",
+    "\n",
+    "punctuations = string.punctuation\n",
+    "\n",
+    "import matplotlib\n",
+    "matplotlib.use('Agg')\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.rcParams[\"xtick.labelsize\"] = 7\n",
+    "import seaborn as sns\n",
+    "\n",
+    "data_directory = '/'.join(os.getcwd().split(\"/\")[:-1]) + '/data/'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orig_data = pd.read_csv(data_directory + 'qaData.csv', parse_dates=['Date'])\n",
+    "orig_data['Year'] = orig_data['Date'].dt.year\n",
+    "orig_data['Month'] = orig_data['Date'].dt.month\n",
+    "orig_data['Quarter'] = orig_data['Month'].apply(lambda x: 1 if x < 4 else 2 if x < 7 else 3 if x < 9 else 4)\n",
+    "orig_data['Company'] = orig_data['Company'].str.title().str.replace(\" \", \"\")\n",
+    "orig_data['AnalystName'] = orig_data['AnalystName'].str.title().str.replace(\" \", \"\")\n",
+    "orig_data['Tag'] = orig_data['EarningTag2'].str.title().str.replace(\" \", \"\")\n",
+    "\n",
+    "orig_data = orig_data.loc[~orig_data['AnalystName'].isna()].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "stackplot() got multiple values for argument 'x'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-376f30b7fca5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m                                                  \u001b[0mquarter_agg_pivot_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'RegulatoryTopics'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m                                                  \u001b[0mquarter_agg_pivot_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Revenue'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m             labels=quarter_agg_pivot_data.columns.tolist()[1:], colors = plt.get_cmap('tab20c').colors)\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlegend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'upper center'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfancybox\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mncol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m14\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/matplotlib/pyplot.py\u001b[0m in \u001b[0;36mstackplot\u001b[0;34m(x, data, *args, **kwargs)\u001b[0m\n\u001b[1;32m   2834\u001b[0m \u001b[0;34m@\u001b[0m\u001b[0mdocstring\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy_dedent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mAxes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstackplot\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2835\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mstackplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2836\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mgca\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstackplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2837\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2838\u001b[0m \u001b[0;31m# Autogenerated by boilerplate.py.  Do not edit as changes will be lost.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/matplotlib/__init__.py\u001b[0m in \u001b[0;36minner\u001b[0;34m(ax, data, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1783\u001b[0m                         \u001b[0;34m\"the Matplotlib list!)\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mlabel_namer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1784\u001b[0m                         RuntimeWarning, stacklevel=2)\n\u001b[0;32m-> 1785\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1786\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1787\u001b[0m         inner.__doc__ = _add_data_doc(inner.__doc__,\n",
+      "\u001b[0;31mTypeError\u001b[0m: stackplot() got multiple values for argument 'x'"
+     ]
+    }
+   ],
+   "source": [
+    "quarter_data = orig_data.groupby([\"Quarter\",\"Tag\"]).size().reset_index()\n",
+    "quarter_agg_data = quarter_data.merge(quarter_data.groupby('Quarter')[0].sum().reset_index(), on='Quarter')\n",
+    "quarter_agg_data['QPct'] = quarter_agg_data['0_x']/quarter_agg_data['0_y']\n",
+    "quarter_agg_pivot_data = quarter_agg_data.pivot(index='Quarter', columns='Tag', values='QPct').reset_index()\n",
+    "quarter_agg_pivot_data.rename_axis(None, axis=1, inplace=True)\n",
+    "\n",
+    "fig = plt.figure(figsize=(30,10))\n",
+    "\n",
+    "plt.stackplot(quarter_agg_pivot_data['Quarter'], quarter_agg_pivot_data['AccountingAndTaxes'],\n",
+    "                                                 quarter_agg_pivot_data['Awm'],\n",
+    "                                                 quarter_agg_pivot_data['BalanceSheet'],\n",
+    "                                                 quarter_agg_pivot_data['Capital'],\n",
+    "                                                 quarter_agg_pivot_data['Cb'],\n",
+    "                                                 quarter_agg_pivot_data['Ccb'],\n",
+    "                                                 quarter_agg_pivot_data['Cib'],\n",
+    "                                                 quarter_agg_pivot_data['CreditCosts'],\n",
+    "                                                 quarter_agg_pivot_data['Expenses'],\n",
+    "                                                 quarter_agg_pivot_data['Legal'],\n",
+    "                                                 quarter_agg_pivot_data['MacroeconomicUpdate'],\n",
+    "                                                 quarter_agg_pivot_data['OtherTopics'],\n",
+    "                                                 quarter_agg_pivot_data['RegulatoryTopics'],\n",
+    "                                                 quarter_agg_pivot_data['Revenue'],\n",
+    "            labels=quarter_agg_pivot_data.columns.tolist()[1:], colors = plt.get_cmap('tab20c').colors)\n",
+    "plt.legend(loc='upper center', fancybox=True, ncol=14)\n",
+    "\n",
+    "plt.savefig('figures/quarter_tag/stackedArea.png', bbox_inches='tight')\n",
+    "\n",
+    "quarter_data = orig_data.groupby([\"Quarter\",\"Tag\"]).size().reset_index()\n",
+    "quarter_agg_data = quarter_data.merge(quarter_data.groupby('Tag')[0].sum().reset_index(), on='Tag')\n",
+    "quarter_agg_data['TPct'] = quarter_agg_data['0_x']/quarter_agg_data['0_y']\n",
+    "quarter_agg_pivot_data = quarter_agg_data.pivot(index='Tag', columns='Quarter', values='TPct').reset_index()\n",
+    "quarter_agg_pivot_data.rename_axis(None, axis=1, inplace=True)\n",
+    "quarter_agg_pivot_data.head()\n",
+    "\n",
+    "\n",
+    "fig = plt.figure(figsize=(30,10))\n",
+    "\n",
+    "plt.title(\"Quarter Percentage By Tag\")\n",
+    "plt.ylabel(\"Percentage\")\n",
+    "plt.xlabel(\"Tag\")\n",
+    "\n",
+    "plt.stackplot(quarter_agg_pivot_data['Tag'], quarter_agg_pivot_data[1],\n",
+    "                                                     quarter_agg_pivot_data[2],\n",
+    "                                                     quarter_agg_pivot_data[3],\n",
+    "                                                     quarter_agg_pivot_data[4], labels=[1, 2, 3, 4], colors = plt.get_cmap('Paired').colors)\n",
+    "plt.legend(loc='upper center', fancybox=True, ncol=14)\n",
+    "\n",
+    "plt.savefig('figures/quarter_tag/stackedArea_QT.png', bbox_inches='tight')"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.0"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
